2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	*  src/GdbServer.cpp (GdbServer::doFileIO): Print instruction on
	problem.

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp: Pass thread, not thread ID to
	redirectStdioOnTrap throughout.
	(GdbServer::redirectStdioOnTrap): Take thread, not thread ID as
	argument.
	(GdbServer::markPendingStops): Only mark pending if at BREAK
	instruction.
	(GdbServer::getStopInstr): Created.
	(GdbServer::doFileIO): Take thread, not thread ID as argument, use
	getStopInstr to get any stop instruction.
	* src/GdbServer.h: Change getFileIO and redirectStdioOnTrap to
	take thread, not thread ID.  Ad getStopInstr.

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspVCont): Correct minor compiler
	errors.
	(GdbServer::extractVContAction): Likewise.
	* src/GdbServer.h: Add declaration of mPendingStops;

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Work in progress. Do not use.

	* src/GdbServer.cpp (GdbServer::rspVCont): Simplify logic and deal
	with pending stops.
	(GdbServer::extractVContAction): Move warnings about invalid
	packets here.
	(GdbServer::pendingStop): Created.
	(GdbServer::markPendingStops): Created.
	(GdbServer::removePendingStop): Created.
	(GdbServer::doStep): Report exception, deal with pending stops.

2014-03-17  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp: Replace haltThreads by haltAllThreads
	throughout.
	(GdbServer::rspServer): Remove check for ctrl-C and move to
	doContinue;
	(GdbServer::rspClientRequest): resume all threads for 'F' packet,
	close connection for 'k' packet.
	(GdbServer::rspContinue): Change call of hash table lookup.
	(GdbServer::rspSetThread): Do the selection for thread 0 here.
	(GdbServer::rspCmdProcess): Reset current threads if necessary.
	(GdbServer::rspIsThreadAlive): Resrict to current process.
	(GdbServer::rspVCont): Correct logic of splitting out tokens.